<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Criticism</string>
    <string name="send_feedback_for">Send feedback for </string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="preview">Preview</string>
    <string name="send">Send</string>
    <string name="description">Description</string>
    <string name="include_screenshot">Include screenshot</string>
    <string name="send_screen_of_last_page">Send screenshot of the last page you were on.</string>
    <string name="include_system_data">Include system data</string>
    <string name="share_data_message">Share system data to better diagnose the problem.</string>
    <string name="sending_report">Sending report…</string>
    <string name="thank_you">Thanks for the feedback!</string>
    <string name="bucket_name_not_found">Cannot find \"feedback_bucket\" in your strings.xml. Please specify your S3 bucket.</string>
    <string name="no_description">Empty description</string>
    <string name="no_logs">No logs provided.</string>
    <string name="failed_to_upload">Failed to upload feedback report</string>
    <string name="retry">Retry</string>
</resources>
