<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:id="@+id/selectionButtons"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/cancel"
            style="@style/Button.Borderless"
            android:text="@string/cancel"/>
        <View style="@style/Divider.Vertical"/>
        <Button
            android:id="@+id/send"
            style="@style/Button.Borderless"
            android:text="@string/send"
            android:onClick="send"/>
    </LinearLayout>
    <View
        style="@style/Divider.Horizontal"
        android:layout_above="@id/selectionButtons"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/selectionButtons"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:hint="@string/description"/>

            <RelativeLayout
                android:id="@+id/screenshotGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="clickedIncludeScreenshot"
                android:visibility="gone">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/include_screenshot"
                        android:textSize="22sp"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/send_screen_of_last_page"/>
                </LinearLayout>
                <CheckBox
                    android:id="@+id/screenshotCheckbox"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:checked="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/systemDataGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:onClick="clickedIncludeSystemData">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/include_system_data"
                        android:textSize="22sp"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/share_data_message"/>
                </LinearLayout>
                <CheckBox
                    android:id="@+id/systemDataCheckbox"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:checked="true"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
